# 3d-bat

./: .gitignore  LICENSE  README.md  bower.json  camera_test.html  config.json  index.html  label_tool.html  license  mechanical_turk.html  multiviewport.html  package-lock.json  package.json  requirements.txt  slider_test.html  test.html  test.json  test2.json  tsconfig.json  webpack.config.js
scripts/: CMakeCache.txt  CMakeLists.txt  calculate_projection_matrix.py  cmake_install.cmake  create_empty_annotations.py  create_file_name_list.py  extract_labels.py  filter_points.py  project_detections.py  remove_sequence.py  rename_files.py  resize_images.py  ros_to_image.py  transform_pcloud.py  utils.py
scripts/docker/: Dockerfile
scripts/lisa_t_devkit/: 1_transform_to_pcd.py  2_export_pointcloud_without_ground_lisat.py  export_pointcloud_without_ground_lisat.py  opencv_object_tracker.py
scripts/lisa_t_devkit/3d_detection/: b_create_video_visualization.m  calibration.mat  cam_to_lidar_transform.mat  compute3DBox.m  rodrigues.m
scripts/lisa_t_devkit/evaluation/: calculate_metrics.py  test.py
scripts/lisa_t_devkit/preprocessing/: 0_extract_point_clouds.py  1_transform_to_pcd.py  2_export_pointcloud_without_ground_lisat.py  3_crop_images.py  4_png_to_jpg.py  calculate_projection_matrices_lisat.py  (+7 more)
scripts/nuscenes_devkit/: README.md  requirements.txt
scripts/test/: LISA_T_2018-05-23-001-frame-00042917-00043816_small_annotations_akshay.json  LISA_T_2018-05-23-001-frame-00042917-00043816_small_annotations_akshay_old.json
scripts/visualization/: 000000.pcd
(+23474 files in other folders)
